# ollama-mcp-chat-cli

./: .env.example  .gitignore  LICENSE  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
agent/: agent_loop.py  cli_agent.py  llm_service.py  terminal_ui.py  tool_manager.py
docs/: index.html
